# cpp_web_server

./: .gitignore  README.md  main.cpp  script_login.js  style_login.css
Backend/Additional/: additional_funcs.cpp  additional_funcs.h
Backend/test/css/: style_login.css
backend/: CMakeLists.txt  configure  configure.bat
backend/src/: main.cpp
backend/src/additional/: additional_funcs.cpp
backend/src/example_httpserver/: CMakeLists.txt  main.cpp
backend/test/: exec_serv  index.html
backend/test/js/: script_login.js
database/Postgres/Sripts/: .init_db.sh.swp
database/Postgres/Sripts/creates/: create_table_script.sql
database/Postgres/Sripts/inserts/: insert_standart_data.sql  insert_test_data.sql
database/Postgres/Sripts/selects/: select_all_aux_table.sql
database/postgres/dump/: DB_CLEAR  DB_WITH_DATA
database/postgres/modeles/: model_db
database/postgres/scripts/: init_db.sh  init_db_win.txt
database/postgres/scripts/creates/: createDB.sql  create_table_script.sql  for_windows.sql
database/postgres/scripts/deletes/: full_crear.sql
database/postgres/scripts/inserts/: insert_test_data.sql
test/: index.html
